--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-auth-mongoose-boilerplate",
+  "name": "nuts-api",
   "version": "1.0.0",
   "description": "Auth boilerplate for mongoose express using token auth",
   "main": "server.js",
@@ -18,6 +18,7 @@
     "method-override": "^3.0.0",
     "mongodb": "^4.11.0",
     "mongoose": "^6.7.0",
+    "nodemon": "^2.0.20",
     "passport": "^0.6.0",
     "passport-http-bearer": "^1.0.1"
   }
