--- a/fly.toml
+++ b/fly.toml
@@ -10,8 +10,8 @@ processes = []
 
 [env]
   PORT = "8080"
-  MONGODB_URI=mongodb+srv://angelzhou1016:angrydogcleo@fullstackapp-cluster-1.ijomeav.mongodb.net/nuts-api?retryWrites=true&w=majority
-  SECRET=theBabyIsLaughingAndTheDogIsSpinningAndTheMilkIsSpilling
+  MONGODB_URI = mongodb+srv://angelzhou1016:angrydogcleo@fullstackapp-cluster-1.ijomeav.mongodb.net/nuts-api?retryWrites=true&w=majority
+  SECRET = theBabyIsLaughingAndTheDogIsSpinningAndTheMilkIsSpilling
 
 
 [experimental]
