--- a/fly.toml
+++ b/fly.toml
@@ -11,7 +11,7 @@ processes = []
 [env]
   PORT = "8080"
   MONGODB_URI = "mongodb+srv://angelzhou1016:angrydogcleo@fullstackapp-cluster-1.ijomeav.mongodb.net/nuts-api?retryWrites=true&w=majority"
-
+  CLIENT_ORIGIN = "https://nuttynuts.netlify.app" 
 
 [experimental]
   allowed_public_ports = []
